ajout de la fonction css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,11 @@
 @import "tailwindcss";
+@import "prismjs/themes/prism-okaidia.css";
+
+/* Supprimer le fond Prism */
+pre[class*="language-"],
+code[class*="language-"] {
+    background: transparent !important;
+}
 
 @layer utilities {
     .scrollbar-none {
